# mediaOrganizer

./: CLAUDE.md  INITIAL_TASK.md  PRD.md  README.md  test_init_db.sh
.claude/commands/: commit.md  gitprune.md  next.md
docs/: TASK_02_CLI_PARSING.md  TASK_03_FILE_SCANNING.md  TASK_04_DUPLICATE_DETECTION.md  TASK_05_FILE_ORGANIZATION.md  TASK_06_PROGRESS_TRACKING.md
docs/tasks/: 001-cli-parsing-implementation.md  001-cli-parsing-pr.md  002-file-scanning-implementation.md  003-integrate-duplicate-organizer.md  004-enhanced-progress-tracking.md
media-organizer/: .gitignore  Cargo.toml  README.md  rustfmt.toml
media-organizer/.cargo/: config.toml
media-organizer/.github/workflows/: ci.yml
media-organizer/benches/: file_scanning.rs  scanner_benchmark.rs
media-organizer/examples/: database_demo.rs  database_demo_progress.rs
media-organizer/src/: cli.rs  database.rs  dedup.rs  duplicate.rs  lib.rs  main.rs  organizer.rs  progress.rs  scanner.rs  types.rs
media-organizer/tests/: integration_full_pipeline.rs  integration_tests.rs
