[package]
name = "media-organizer"
version = "0.1.0"
edition = "2021"
authors = ["Media Organizer Team"]
description = "A high-performance CLI tool for organizing media files on macOS"
license = "MIT"
repository = "https://github.com/yourusername/media-organizer"
keywords = ["media", "organizer", "cli", "macos", "files"]
categories = ["command-line-utilities", "filesystem"]

[profile.release]
# Optimizations for Apple Silicon
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help", "unicode"] }

# Async runtime and file operations
tokio = { version = "1.35", features = ["full"] }

# Directory traversal
walkdir = "2.4"

# Date and time handling
chrono = "0.4"

# Fast hashing for duplicate detection
blake3 = "1.5"

# Progress bars
indicatif = "0.17"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Path manipulation
pathdiff = "0.2"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Serialization and compression for database
bincode = "1.3"
zstd = "0.13"

# System information for performance monitoring
sysinfo = "0.30"

# Terminal detection
atty = "0.2"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
criterion = "0.5"
pretty_assertions = "1.4"

[[bench]]
name = "file_scanning"
harness = false

[[bench]]
name = "scanner_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]